# modular_arithmetic

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: galois_field.rs  lib.rs  mod_math.rs  mod_math_test.rs  num_mod.rs  num_mod_test.rs
src/curves/: bn128.rs  bn128_test.rs  curve.rs  curves.rs  elliptical_curve.rs  mod.rs
src/galois_field/: galois_field.rs  galois_field_test.rs  mod.rs
src/mod_math/: mod.rs  mod_math.rs  mod_math_test.rs
src/num_mod/: mod.rs  num_mod.rs  num_mod_test.rs
src/number_mod/: mod.rs  number_mod.rs  number_mod_test.rs
