[package]
name = "modular_arithmetic"
version = "0.1.0"
authors = ["CleanPegasus <me@cleanpegasus.dev>"]
description = "A simple modular arithmetic crate for U256"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
primitive-types = "0.12.2"