[package]
name = "modular_math"
version = "0.1.6"
authors = ["CleanPegasus <me@cleanpegasus.dev>"]
description = "A simple modular arithmetic crate for U256"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
primitive-types = "0.12.2"
rand = "0.8"